--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "axios": "^1.7.2",
+    "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.468.0",
+    "mongoose": "^8.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "recharts": "^2.12.7",
-    "zustand": "^4.5.2",
-    "axios": "^1.7.2",
-    "date-fns": "^3.6.0",
-    "clsx": "^2.1.1"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.7",
@@ -31,5 +36,18 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "vite": "^5.4.2"
-  }
+  },
+  "description": "A React + Vite + Tailwind frontend for the **Cura** Personal MediCare platform with pages for Dashboard, Appointments, Medications, Alerts, Records, Settings, and simple Auth (demo).",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Pragathija/CuraBridge.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Pragathija/CuraBridge/issues"
+  },
+  "homepage": "https://github.com/Pragathija/CuraBridge#readme"
 }
