--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
+    "react-select": "^5.10.2",
     "recharts": "^2.12.7",
     "zustand": "^4.5.2"
   },
